# pre-commit-example

./: LICENSE  README.md  pyproject.toml
src/example/: __init__.py
